feat(storage): Refactor to on-device document storage for mobile-only architecture
This major architectural change pivots the application from a cloud-based storage model using Firebase Cloud Storage to a mobile-centric, on-device storage solution.

### Rationale

The primary driver for this change was the strategic decision to focus exclusively on a mobile application, deprecating the web platform. This made the complexities of cloud storage (CORS, Firebase web SDKs, network dependency) unnecessary.

The new on-device storage model offers several key advantages for a mobile-only app:
- **Offline First:** Users can now add and manage their documents without an active internet connection.
- **Simplified Architecture:** Removes the entire dependency on Firebase Storage and its associated services.
- **Improved Performance & Reliability:** Eliminates network latency and potential failures during file uploads.

### Implementation Details

- **LocalDocumentStorageService:** A new service was created to save files directly to the application's private directory on the device using path_provider.
- **Firestore for Metadata:** While files are stored locally, their metadata (filename, path, etc.) is still saved in Firestore to track and manage them.
- **Dependency Injection Update:** The service initializer was updated to inject LocalDocumentStorageService instead of the now-obsolete FirebaseDocumentStorageService.

### Build & Environment Fixes

This effort also involved resolving several platform-specific build issues:
- **Increased Gradle Memory:** Resolved Android build stalls by increasing the JVM memory allocation for Gradle to 6GB in ndroid/gradle.properties.
- **Windows Build Environment Setup:** Documented the need for the Visual Studio 'Desktop development with C++' workload and the Firebase CLI for any future native desktop development.

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,13 @@
   
   <!--google cloud client ID-->
   <meta name="google-signin-client_id" content="445502709010-v0797dcc0hs0q4tnemo0utcujv49b5n0.apps.googleusercontent.com">
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
