feat(worldid): integrate Worldcoin IDKit on web + backend verify proxy\n\n- Add IDKit wrapper + meta tags in web/index.html and vercel-backend/public/index.html\n- Add Dart web interop (world_id_interop_web.dart) with non-web stubs\n- Wire Profile screen to open IDKit and send proof to WorldIdService\n- Add WorldIdService and register in ServiceInitializer (prod baseUrl https://air24.app/api)\n- Add Vercel serverless verify endpoint (api/worldid-verify.js) reading WLD_APP_ID\n- Keep public bundle out of VCS; only commit index.html\n\nTested: built web, synced public, deployed to Vercel prod; modal opens and backend verifies (env configured).

--- a/vercel-backend/public/index.html
+++ b/vercel-backend/public/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -35,7 +35,7 @@
   <!--google cloud client ID-->
   <meta name="google-signin-client_id" content="445502709010-v0797dcc0hs0q4tnemo0utcujv49b5n0.apps.googleusercontent.com">
 
-  <!-- Worldcoin IDKit config (public). Set these in production builds. -->
+  <!-- Worldcoin IDKit config (public). Set these values in production deployments. -->
   <meta name="worldcoin-app-id" content="app_6f4b07c9d84438a94414813a89974ab0">
   <meta name="worldcoin-action" content="flight-compensation-mini-app-verify">
 
