web: build fresh Flutter web bundle; fix greeting polish (hide empty parentheses); copy assets into vercel-backend/public for Vercel; local prod preview working on :3000

--- a/vercel-backend/public/index.html
+++ b/vercel-backend/public/index.html
@@ -35,7 +35,7 @@
   <!--google cloud client ID-->
   <meta name="google-signin-client_id" content="445502709010-v0797dcc0hs0q4tnemo0utcujv49b5n0.apps.googleusercontent.com">
 
-  <!-- Worldcoin IDKit config (public). Set these values in production deployments. -->
+  <!-- Worldcoin IDKit config (public). Set these in production builds. -->
   <meta name="worldcoin-app-id" content="app_6f4b07c9d84438a94414813a89974ab0">
   <meta name="worldcoin-action" content="flight-compensation-mini-app-verify">
 
