feat(seo): Add Google Search Console verification meta tag
Added verification code for Google Search Console

Next step: Deploy and verify ownership

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,9 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="JAz06CJeUHjDiy3vVciNoSnG7JxcN7xKp7JlWt5L1Ts" />
+  
   <!-- Primary SEO Meta Tags -->
   <title>Air24 - Free Flight Compensation Claim | EU Regulation 261/2004 | Get Up to €600</title>
   <meta name="title" content="Air24 - Free Flight Compensation Claim | EU Regulation 261/2004 | Get Up to €600">
