feat(seo): Add Bing Webmaster Tools verification meta tag
Added Bing verification code for air24.app

✅ Google Search Console - VERIFIED

⏳ Bing Webmaster - Awaiting verification

--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,9 @@
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="JAz06CJeUHjDiy3vVciNoSnG7JxcN7xKp7JlWt5L1Ts" />
   
+  <!-- Bing Webmaster Verification -->
+  <meta name="msvalidate.01" content="AF41985CCC683C2C379906A9DCE03DAA" />
+  
   <!-- Primary SEO Meta Tags -->
   <title>Air24 - Free Flight Compensation Claim | EU Regulation 261/2004 | Get Up to €600</title>
   <meta name="title" content="Air24 - Free Flight Compensation Claim | EU Regulation 261/2004 | Get Up to €600">
