Deploy latest build with World ID primary authentication to production

--- a/vercel-backend/public/index.html
+++ b/vercel-backend/public/index.html
@@ -18,19 +18,126 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="JAz06CJeUHjDiy3vVciNoSnG7JxcN7xKp7JlWt5L1Ts" />
+  
+  <!-- Bing Webmaster Verification -->
+  <meta name="msvalidate.01" content="AF41985CCC683C2C379906A9DCE03DAA" />
+  
+  <!-- Primary SEO Meta Tags -->
+  <title>Air24 - Free Flight Compensation Claim | EU Regulation 261/2004 | Get Up to €600</title>
+  <meta name="title" content="Air24 - Free Flight Compensation Claim | EU Regulation 261/2004 | Get Up to €600">
+  <meta name="description" content="Claim €250-€600 compensation for delayed, cancelled, or overbooked flights in the EU. Free tool powered by EC Regulation 261/2004. Track your claim easily. No win, no fee.">
+  <meta name="keywords" content="flight compensation, delayed flight compensation, cancelled flight refund, EU regulation 261/2004, airline compensation, flight refund, overbooked flight, air passenger rights, free flight compensation claim, €600 compensation">
+  <meta name="author" content="Air24">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English, Spanish, Portuguese, French, German, Polish">
+  <link rel="canonical" href="https://air24.app/">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://air24.app/">
+  <meta property="og:title" content="Air24 - Claim Up to €600 for Delayed Flights | Free Tool">
+  <meta property="og:description" content="Flight delayed 3+ hours? Claim €250-€600 compensation under EU law. Free, fast, and easy. Track your claim in real-time. No win, no fee.">
+  <meta property="og:image" content="https://air24.app/icons/Icon-512.png">
+  <meta property="og:site_name" content="Air24">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="es_ES">
+  <meta property="og:locale:alternate" content="pt_PT">
+  <meta property="og:locale:alternate" content="fr_FR">
+  <meta property="og:locale:alternate" content="de_DE">
+  <meta property="og:locale:alternate" content="pl_PL">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://air24.app/">
+  <meta name="twitter:title" content="Air24 - Claim Up to €600 for Delayed Flights">
+  <meta name="twitter:description" content="Flight delayed 3+ hours? Claim €250-€600 compensation under EU law. Free, fast, and easy.">
+  <meta name="twitter:image" content="https://air24.app/icons/Icon-512.png">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Air24">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>Air24</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Schema.org JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Air24",
+    "url": "https://air24.app",
+    "description": "Free flight compensation claim tool for EU passengers. Claim €250-€600 for delayed, cancelled, or overbooked flights under EC Regulation 261/2004.",
+    "applicationCategory": "TravelApplication",
+    "operatingSystem": "Web, iOS, Android",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "EUR"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "ratingCount": "150"
+    },
+    "inLanguage": ["en", "es", "pt", "fr", "de", "pl"]
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Air24",
+    "url": "https://air24.app",
+    "logo": "https://air24.app/icons/Icon-512.png",
+    "sameAs": [],
+    "description": "Air24 helps EU passengers claim compensation for delayed, cancelled, or overbooked flights. Free tool based on EU Regulation 261/2004."
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "How much compensation can I get for a delayed flight?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Under EU Regulation 261/2004, you can claim €250 for flights under 1,500km, €400 for flights 1,500-3,500km, and €600 for flights over 3,500km if delayed 3+ hours."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "When am I eligible for flight compensation?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You're eligible if your flight departed from an EU airport or arrived at an EU airport on an EU airline, was delayed 3+ hours, cancelled less than 14 days before departure, or you were denied boarding due to overbooking."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is Air24 free to use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes! Air24 is completely free. We help you track your claim and provide all the tools you need to claim compensation from airlines."
+        }
+      }
+    ]
+  }
+  </script>
   
   <!--google cloud client ID-->
   <meta name="google-signin-client_id" content="445502709010-v0797dcc0hs0q4tnemo0utcujv49b5n0.apps.googleusercontent.com">
